--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,31 @@
 
 
 提交历史 是不是该用 QTreeWidget
+
+
+pip install py2app
+
+from setuptools import setup
+
+APP = ['main.py']
+OPTIONS = {
+    'argv_emulation': True,
+    'iconfile': 'icon.icns',
+    'plist': {
+        'CFBundleName': "Git Manager",
+        'CFBundleDisplayName': "Git Manager",
+        'CFBundleIdentifier': "com.yourdomain.gitmanager",
+        'CFBundleVersion': "1.0.0",
+        'CFBundleShortVersionString': "1.0.0",
+    }
+}
+
+setup(
+    app=APP,
+    options={'py2app': OPTIONS},
+    setup_requires=['py2app'],
+)
+
+python setup.py py2app
+
+这样就会在 dist 目录下生成一个带有正确图标的 .app 文件。
