--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -36,13 +36,15 @@ python setup.py py2app
 这样就会在 dist 目录下生成一个带有正确图标的 .app 文件。
 
 
-滚动同步还是有些问题，就tests下文件滚动看起来都有问题
+滚动同步还是有些问题，就 tests 下文件滚动看起来都有问题
 似乎是在不同的框往下滚动时 行为不一样
 
-git diff那块估计有问题
+git diff 那块估计有问题
 
 DiffViewer
 MergeDiffViewer
 下一阶段，合并这两个
 
 git diff 单元测试
+
+发现大模型很喜欢在 logging 的时候用 fstringlogging.info(f"Started watching folder for changes: {folder_path}")
